manifests/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: yolo-backend
          image: reyhanacynthia/yolo-backend:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: backend
      targetPort: 5000
      port: 80
      protocol: TCP
  selector:
    app: backend
  type: LoadBalancer
