manifests/mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  replicas: 1
  serviceName: mongodb-service
  selector:
    matchLabels:
      app: mongodb-service
  template:
    metadata:
      labels:
        app: mongodb-service
    spec:
      containers:
        - name: mongodb-service
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:          
            - name: mongodb-data
              mountPath: /data/db  
      volumes:                  
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
      app: mongodb-service
  type: LoadBalancer
