manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.regional-static-ip-name: "gke-static-ip"
spec:
  rules:
    - host: kubernetes.docker.internal
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: client
                port:
                  number: 3000
          - path: /backend
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 5000
